crates/tui/snapshots/inline/mode/command_result_detail_indent.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
> /command                                        
 └─ first result                                  
    second result                                 
                                                  
                                                  
──────────────────────────────────────────────────
>                                                 
──────────────────────────────────────────────────
                                                  
  ⏸ Manual · ← Dashboard · ? for shortcuts
