crates/tui/snapshots/inline/mode/inline_draft_after_panel_dismissed.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
> keep editing this draft                         
──────────────────────────────────────────────────
                                                  
  ⏸ Manual
