crates/tui/snapshots/inline/mode/inline_home_draft_is_separate_from_dashboard.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
> new task draft                                  
──────────────────────────────────────────────────
                                                  
  ⏸ Manual
