crates/tui/snapshots/inline/mode/inline_manager_own_selection.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
─ Dashboard ─────────────────── Group: Status  g ─
                                                  
  Idle (2) -                                      
> ○ first session                                 
  ○ second session                                
                                                  
  Archived (0)                                    
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  Enter/→ to open · Esc to return
