crates/tui/snapshots/inline/mode/inline_panel_above_parked_preview.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
                                                  
                                                  
─ Help ───────────────────────────────────────────
                                                  
   Commands                                       
  First                                           
> Second                                          
                                                  
  Tab/Shift+Tab to switch  ·  Esc to close
