crates/tui/snapshots/inline/mode/inline_preview_restored_after_panel.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
Loading conversation…                             
  Preview · first session · read only             
  Esc to close
