crates/tui/snapshots/inline/mode/inline_scroll_with_shared_draft.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
● message 00                                      
                                                  
           Ctrl+End to jump to bottom ↓           
  Queue 1: queued message · next                  
                                                  
──────────────────────────────────────────────────
> shared draft                                    
──────────────────────────────────────────────────
                                                  
  ⏸ Manual
