crates/tui/snapshots/inline/mode/model_search_Inline.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                                        "
"    ▄  ▄     Ash Code v0.1.0                                                                                            "
"  ▗█▛██▜█▖   Automatic model                                                                                            "
"  ▝▜████▛▘   .                                                                                                          "
"    ▝  ▘                                                                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ Model ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ astra                                                                                                            │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"  GPT-6 Astra      ██ ██ ██   Medium  [Fast off]  [Long context off]                                                    "
"                                                                                                                        "
"  Enter/Esc/Ctrl+C to return                                                                                            "
