crates/tui/snapshots/inline/mode/restored_inline_transcript_focus.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
● focus message 04                                
                                                  
● focus message 05                                
                                                  
● focus message 06                                
                                                  
● focus message 07                                
                                                  
           Ctrl+End to jump to bottom ↓           
  Queue 1: queued message · next                  
                                                  
──────────────────────────────────────────────────
>                                                 
──────────────────────────────────────────────────
                                                  
  Space to expand · Esc to return to input
